--- a/projeto2/.env
+++ b/projeto2/.env
@@ -1,10 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=projetoEtec
 APP_ENV=local
 APP_KEY=base64:/tJYLi0A7mkmRNnRa37KCXyOUzt6uM4G5ETXMDjEivU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_TIMEZONE=America/Sao_paulo
+APP_URL=http://127.0.0.1:8000
 
-APP_LOCALE=en
+APP_LOCALE=pt-BR
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -20,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=EtecLaravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -38,7 +39,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
+CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
